RESOLVED FIXED211126
msn.com: Header flickers when scrolling articles
https://bugs.webkit.org/show_bug.cgi?id=211126
Summary msn.com: Header flickers when scrolling articles
Antti Koivisto
Reported 2020-04-28 08:10:03 PDT
Attachments
patch (4.09 KB, patch)
2020-04-28 08:26 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2020-04-28 08:10:13 PDT
Antti Koivisto
Comment 2 2020-04-28 08:26:12 PDT
EWS
Comment 3 2020-04-28 09:05:40 PDT
Committed r260828: <https://trac.webkit.org/changeset/260828> All reviewed patches have been landed. Closing bug and clearing flags on attachment 397838 [details].
Note You need to log in before you can comment on or make changes to this bug.